# regular-vm-tools

./: .gitignore  CMakeLists.txt  README.md
asm/: CMakeLists.txt  asm.c  asm.h  compiler.c  compiler.h  main.c  statement.c  statement.h
asm/calc/: calc.c  calc.h  error.h  token.c
calc/: calc.c  calc.h  error.c  error.h  token.c  token.h
common/: instructions.h  ops.c  ops.h  regs.c  regs.h  util.h
disasm/: disasm.c  disasm.h  main.c
exec/: exec.c
testing/: asm.txt  fib.asm  test.asm
vm/: main.c  vm.c  vm.h
